--- a/pom.xml
+++ b/pom.xml
@@ -55,13 +55,18 @@
 		<dependency>
 			<groupId>org.flowable</groupId>
 			<artifactId>flowable-spring-boot-starter-cmmn</artifactId>
-			<version>6.8.1</version>
+			<version>7.0.0</version>
 		</dependency>
 		<!-- starter-rest has spring-boot-starter-web included -->
 		<dependency>
 			<groupId>org.flowable</groupId>
 			<artifactId>flowable-spring-boot-starter-rest</artifactId>
 			<version>6.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.flowable</groupId>
+			<artifactId>flowable-spring-boot-starter-process</artifactId>
+			<version>7.0.0</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.flowable/flowable-content-engine -->
