--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -70,11 +74,8 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.flowable/flowable-content-engine -->
-		<!-- <dependency>
-			<groupId>org.flowable</groupId>
-			<artifactId>flowable-content-engine</artifactId>
-			<version>7.0.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.flowable</groupId> <artifactId>flowable-content-engine</artifactId> 
+			<version>7.0.0</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
